Ajusta imagem de perfil e ícones em rosa claro

--- a/perfil.html
+++ b/perfil.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header>
-    <img src="https://via.placeholder.com/150" alt="Foto de Mariana" class="foto-perfil" />
+    <img src="minha-foto.jpeg" alt="Foto de Mariana" class="foto-perfil" />
     <h1>Mariana Gimenez</h1>
     <p>Profissional de QA | Explorando a web com propósito</p>
   </header>
@@ -25,7 +25,7 @@
   <main>
     <section id="sobre">
       <h2>Sobre Mim</h2>
-      <p>Sou Mariana, profissional de QA com foco em garantir a qualidade de sistemas web e mobile. Gosto de aprender novas tecnologias e melhorar continuamente meus processos de teste.</p>
+      <p>Sou a Mariana, profissional de QA com foco em garantir a qualidade de sistemas web e mobile. Gosto de aprender novas tecnologias e melhorar continuamente meus processos de teste.</p>
     </section>
 
     <section id="habilidades">
@@ -52,8 +52,8 @@
 
     <section id="contato">
       <h2>Contato</h2>
-      <p>Email: mariana@email.com</p>
-      <p>LinkedIn: <a href="#">linkedin.com/in/mariana</a></p>
+      <p>Email: marigimenezm@hotmail.com</p>
+      <p>LinkedIn: <a href="#">https://www.linkedin.com/in/mariana-gimenez-qa/</a></p>
     </section>
   </main>
 
